--- a/src/style.css
+++ b/src/style.css
@@ -232,9 +232,36 @@ body{
 }
 /*stats*/
 #stats{
-    background-color:cornflowerblue;
-    margin-top: 26px;
-    margin-left: 40px;
-    margin-right: 40px;
-    margin-bottom: 26px;
+    background-color:#a6a5a5a8;
+    margin:30px;
+    padding: 15px;
+    border:#0000007e solid 5px;
+    border-radius: 13px;
+    display: flex;
+
+}
+#main-table{
+    background-color: #f8dbd556;
+    width: 100%;
+}
+#main-table thead{
+    font-size: 13px;
+    font-style: oblique;
+    background-color: #bb201ddc;
+    color: #ffffff;
+}
+
+#pokedex-stats tr td {
+    font-size: 15px;
+    font-style: italic;
+    text-align: center;
+    margin: 20px;
+    padding: 3px;
+    
+    
+        
+}
+#pokedex-stats tr td img{
+    width: 100%;
+    height: 80%;
 }
