--- a/src/style.css
+++ b/src/style.css
@@ -7,18 +7,20 @@
 body {
     width: 100%;
     text-align: center;
+    background-color:black;
+    background-image: linear-gradient(rgba(5, 7, 12, .8), rgba(0, 0, 0, .5)),
+    url(./img/back.png );
 }
 
 header {
-    background-color: rgb(0, 0, 0);
+   
     height: 300px;
     width: 100%;
     color: white;
     font-size:6em;
     font-family: 'roboto';
     position: relative;
-    background-image: linear-gradient(rgba(5, 7, 12, .5), rgba(5, 7, 12, .5)),
-    url(./img/back.png );
+     
 }
  
  
@@ -70,11 +72,11 @@ header {
     content: '';
     position: absolute;
     width: 900px;
-    height: 2px;
+    height: 1px;
     margin: auto;
     background-color: rgb(172, 172, 172);
     top: 1.5em;
-    box-shadow: 0px 8px 40px 4px rgb(192, 190, 190);
+    box-shadow: 0px 8px 40px 2px rgb(105, 105, 105);
 
     
 }
@@ -85,20 +87,11 @@ header {
     right:140px;
 }
 
-
-
-
-
-
-
-
-
 main {
     width: 100%;
     height: 100%;
-    background-color: black;
-    background-image: linear-gradient(rgba(5, 7, 12, .5), rgba(5, 7, 12, .5)),
-        url(./img/back.png );
+     
+    
     font-family: 'Roboto', sans-serif;
 
 }
@@ -156,85 +149,39 @@ p {
     font-size: 1.2em;
     width: 90%;
     
-     
-    
-     
-}
-
-
-
-
-
-/*
-.container1{
-  padding: 100px;
-
     
 }
-img{
-    display: inline-block;
-}
-.title{
-    width: 100px;
-    height: 45px;
-    position: relative;
-}
-.img::after, .img::before{
-    content: '';
-    position: absolute;
-    margin: auto;
-    width: 45%;
-    top: 45%;
-    background-color: redS;
 
-}*/
-
-/*body{
-     background-color: rgb(87, 86, 86);
-}*/
-/*h1{
+.select {
+    background-color: rgb(231, 231, 217);
+    width: 200px; 
+    height: 35px;
+    text-align: center;
+    padding: 5px;
+    border-radius: 20px;
+    margin: 10px;
+    border: 2px solid white;
+    box-shadow: 0px 0px 10px 1px rgb(167, 165, 141);
+    font-family: 'roboto';
+    opacity: 0.8;
+    color: rgb(43, 43, 43);
     
-    position: relative;
-    margin: 40px;
+
+
+}
+
+option {
+    background-color: #fffffffb;
+    border: 0px solid ;
+    font-size: 14px;
     padding: 20px;
-    background-color: red;
-    
-  
-}
-h1::after,h1::before{
-    content: '';
-    position: absolute;
-    width: 50%;
-    height: 1px;
-    background-color: black;
-    top: 50%;
-}
-h1::before{
-    left: -100px;
-    right: -50px;
-}
-h1::after{
-    right: -100px;
-}
-
-/*.container1{
-    background-color: rgb(192, 138, 138);
-    position: relative;
-}*/
-
-/*---------------------*/
-
-/*header{
-    background-color: rgb(0, 0, 0);
-    height: 20vh;
-    width: 100%;
-    position: relative;
-    border: 2px solid yellow;
-     
-     
-   
+    margin:auto;
+    opacity: 0.5;
+    border-radius:8px solid ;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: rgb(74, 77, 76);
+    padding: 10px;
     
 }
 
-    
  
