--- a/src/style.css
+++ b/src/style.css
@@ -486,3 +486,55 @@ section{
         margin-right: 7px;
     }
 }
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1; 
+    padding-top: 200px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.5);
+
+}
+
+.modal-content {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    border-radius: 20px;
+    position: relative;
+    background-color: white;
+    margin: auto;
+    padding: 20px;
+    width: 60%;
+    -webkit-animation-name:animarsuperior;
+    -webkit-animation-duration: 05s;
+    animation-name: animarsuperior;
+    animation-duration: 0.5s;
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0} 
+    to {top:0; opacity:1}
+  }
+  @keyframes animarsuperior {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+  }
+
+  .close {
+    color: black;
+    float: right;
+    font-size: 30px;
+    font-weight: bold;
+  }
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
