--- a/src/style.css
+++ b/src/style.css
@@ -240,9 +240,6 @@ body{
     margin: 30px 180px;
 
 }
-
-.filter label {
-
 .seeker{
     padding: 10px;
     display: flex;
@@ -309,50 +306,41 @@ body{
 }
 
 /*stats*/
-.element-datatr {
-    font-size: 15px;
-    font-style: italic;
-    text-align: center;
-    margin: 20px;
-    padding: 3px;
-}
-
-.element-datatr tr td img {
-    width: 50%;
-    height: 80%;
-}
-
 .stats-contain {
-    background-color: #a6a5a5a8;
-    margin: 30px ;
-    padding: 15px;
-    border:5px  solid #0000007e ;
+    background-color:#a6a5a57a;
+    margin: 15px 78px;
+    padding: 1% 5%;
+    border:5px solid #0000007e ;
     border-radius: 13px;
 }
-.title-table{
-    background-color: #f8dbd556;
-    width: 100%;}
-
 .main-table {
-    background-color: #f8dbd556;
+    background-color:#ffffff9b ;/*#f8dbd556*/
     width: 100%;
     height: 100%;
 }
-
 .main-table thead {
-    font-size: 13px;
+    font-size: 18px;
     font-style: oblique;
-    background-color: #bb201ddc;
+    background-color: #dd2522dc;
     color: #ffffff;
-}g
-
-.element-datatr tr td {
-    font-size: 15px;
+}
+.element-datatr {
+    background-color: gold;
+    font-size: 18px;
+    font-style: italic;
+    text-align: center;
+}
+.element-datatr td {
     font-style: italic;
     text-align: center;
     margin: 20px;
     padding: 3px;
 }
+.element-datatr td img {
+    width: 60%;
+    height: 60%;
+}
+
 
 /*footer*/
 .cotainer-footer {
@@ -442,39 +430,4 @@ body{
     color: #202f40;
     color: #ffff00;
     color:#1d1533
-}
-/*stats*/
-#stats{
-    background-color:#a6a5a5a8;
-    margin:30px;
-    padding: 15px;
-    border:#0000007e solid 5px;
-    border-radius: 13px;
-    display: flex;
-
-}
-#main-table{
-    background-color: #f8dbd556;
-    width: 100%;
-}
-#main-table thead{
-    font-size: 13px;
-    font-style: oblique;
-    background-color: #bb201ddc;
-    color: #ffffff;
-}
-
-#pokedex-stats tr td {
-    font-size: 15px;
-    font-style: italic;
-    text-align: center;
-    margin: 20px;
-    padding: 3px;
-    
-    
-        
-}
-#pokedex-stats tr td img{
-    width: 100%;
-    height: 80%;
 }
